--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "php": ">=7.2.5",
         "guzzlehttp/guzzle": "^6.2 || ^7.0",
         "illuminate/notifications": "5.5 - 11",
-        "illuminate/support": "5.5 - 11"
+        "illuminate/support": "5.5 - 11",
+        "utcl/utel": "^1.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3",
@@ -32,12 +33,12 @@
     },
     "autoload": {
         "psr-4": {
-            "NotificationChannels\\UTelSms\\": "src"
+            "UTel\\UTelSms\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "NotificationChannels\\UTelSms\\Test\\": "tests"
+            "UTel\\UTelSms\\Test\\": "tests"
         }
     },
     "scripts": {
@@ -49,7 +50,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "NotificationChannels\\UTelSms\\UTelSmsServiceProvider"
+                "UTel\\UTelSms\\UTelSmsServiceProvider"
             ]
         }
     }
